[project]
name = "GraphEnsemble"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan", email = "ryhime1@gmail.com"},
]
dependencies = ["torch>=2.5.1", "torch-geometric>=2.6.1", "scipy>=1.14.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
